--- a/FrontEnd/templates/AgeEstimation.html
+++ b/FrontEnd/templates/AgeEstimation.html
@@ -904,7 +904,8 @@ else if (status === 'error'){
 }
 
 else if (status === 'confirm'){
-    //alert('has been sent');
+    alert( '907' + localStorage.getItem('username'));
+
     $.ajax({
                 url: '/BackEnd/checkIfAssigned/',
                 type: 'GET',
@@ -918,8 +919,8 @@ else if (status === 'confirm'){
                     else{
                         document.getElementById("instructions").style.display = "none";
                         document.getElementById('ageGroupConfirm').style.display = 'block';
-                        alert(localStorage.getItem('username'));
-                        if('line 922'+ localStorage.getItem('username') === null ){
+                        alert('line 922'+ localStorage.getItem('username'));
+                        if(localStorage.getItem('username') === null ){
                             document.getElementById('ageGroupConfirm').style.display = 'none';
                             document.getElementById("instructions").style.display = "none";
                             document.getElementById('errorPopUpBrowser').style.display = 'block';
