--- a/FrontEnd/templates/AgeEstimation.html
+++ b/FrontEnd/templates/AgeEstimation.html
@@ -909,13 +909,14 @@ else if (status === 'confirm'){
                 type: 'GET',
                 dataType: 'json',
                 success: function (data) {
-                    alert(data.status);
-                    if(data.status){
+                    alert(912 + data.AgeGroup);
+                    if(data.AgeGroup){
                         //alert('line 914'+ data.status);
                         document.getElementById("instructions").style.display = "none";
                         document.getElementById("errorPopUp").style.display = "block";
                     }
                     else{
+                        alert('in 919');
                         document.getElementById("instructions").style.display = "none";
                         document.getElementById('ageGroupConfirm').style.display = 'block';
                         //alert('line 922'+ localStorage.getItem('username'));
