--- a/FrontEnd/templates/Games.html
+++ b/FrontEnd/templates/Games.html
@@ -826,6 +826,9 @@ padding: 10px;
 									}
 								});
 							});
+                            document.getElementById('logout-btn').addEventListener('click', function(event) {
+                                localStorage.clear();
+                            });
 							</script>
 
 
