--- a/FrontEnd/templates/AgeEstimation.html
+++ b/FrontEnd/templates/AgeEstimation.html
@@ -876,6 +876,7 @@ if (status === 'done') {
         document.getElementById('errorPopUpBrowser').style.display = 'block';
         document.getElementById('EmailConfirmedSuccessfully').style.display = 'none';
         document.getElementById("instructions").style.display = "none";
+        document.getElementById('errorPopUp').style.display = 'none';
     }
 
     $.ajax({
@@ -885,12 +886,14 @@ if (status === 'done') {
                 success: function (data) {
                     if(data.status === true){
                         document.getElementById('errorPopUp').style.display = 'block';
+                        document.getElementById('done').style.display = 'none';
                     }
 
                 },
                 error: function () {
                     console.error('Failed to fetch status.');
                     document.getElementById('errorPopUp').style.display = 'block';
+                    document.getElementById('done').style.display = 'none';
                 }});
 
     // Display done pop-up
@@ -898,13 +901,16 @@ if (status === 'done') {
     document.getElementById('done').style.display = 'block';
     document.getElementById("instructions").style.display = "none";
     document.getElementById('send').style.display = 'none';
+    document.getElementById('errorPopUp').style.display = 'none';
     }
     else{
         document.getElementById('EmailConfirmedSuccessfully').style.display = 'block';
         document.getElementById("instructions").style.display = "none";
+        document.getElementById('errorPopUp').style.display = 'none';
 
     setTimeout(function(){
         document.getElementById("instructions").style.display = "block";
+        document.getElementById('errorPopUp').style.display = 'none';
         document.getElementById('EmailConfirmedSuccessfully').style.display = 'none';
 
     }
@@ -947,6 +953,7 @@ else if (status === 'confirm'){
                     document.getElementById('ageGroupConfirm').style.display = 'none';
                     document.getElementById("instructions").style.display = "none";
                     document.getElementById('errorPopUpBrowser').style.display = 'block';
+                    document.getElementById('errorPopUp').style.display = 'none';
                 }
 
                 if(PageName == 'login'){
