--- a/FrontEnd/templates/AgeEstimation.html
+++ b/FrontEnd/templates/AgeEstimation.html
@@ -885,12 +885,14 @@ if (status === 'done') {
                 dataType: 'json',
                 success: function (data) {
                     if(data.status === true){
+                        alert('in 888');
                         document.getElementById('errorPopUp').style.display = 'block';
                         document.getElementById('done').style.display = 'none';
                     }
 
                 },
                 error: function () {
+                    alert('in 895');
                     console.error('Failed to fetch status.');
                     document.getElementById('errorPopUp').style.display = 'block';
                     document.getElementById('done').style.display = 'none';
@@ -902,16 +904,19 @@ if (status === 'done') {
     document.getElementById("instructions").style.display = "none";
     document.getElementById('send').style.display = 'none';
     document.getElementById('errorPopUp').style.display = 'none';
+    document.getElementById('errorPopUpBrowser').style.display = 'none';
     }
     else{
         document.getElementById('EmailConfirmedSuccessfully').style.display = 'block';
         document.getElementById("instructions").style.display = "none";
         document.getElementById('errorPopUp').style.display = 'none';
+        document.getElementById('errorPopUpBrowser').style.display = 'none';
 
     setTimeout(function(){
         document.getElementById("instructions").style.display = "block";
         document.getElementById('errorPopUp').style.display = 'none';
         document.getElementById('EmailConfirmedSuccessfully').style.display = 'none';
+        document.getElementById('errorPopUpBrowser').style.display = 'none';
 
     }
         , 5000);
@@ -922,6 +927,7 @@ else if (status === 'error'){
     document.getElementById('send').style.display = 'none';
     document.getElementById("instructions").style.display = "none";
     document.getElementById('errorPopUp').style.display = 'block';
+    document.getElementById('errorPopUpBrowser').style.display = 'none';
     document.getElementById("ageGroupConfirm").style.display = "none";
 }
 
@@ -947,6 +953,8 @@ else if (status === 'confirm'){
                 
                 error: function () {
                     console.error('Failed to fetch status.');
+                    document.getElementById("instructions").style.display = "none";
+                    document.getElementById("errorPopUp").style.display = "block";
                 }});
 
                 if(localStorage.getItem('username') === null ){
