--- a/FrontEnd/templates/AgeEstimation.html
+++ b/FrontEnd/templates/AgeEstimation.html
@@ -872,6 +872,7 @@ margin-left:15px;
 if (status === 'done') {
     
     if(localStorage.getItem('username') === null ){
+        alert(875);
         document.getElementById('done').style.display = 'none';
         document.getElementById('errorPopUpBrowser').style.display = 'block';
         document.getElementById('EmailConfirmedSuccessfully').style.display = 'none';
@@ -895,12 +896,16 @@ if (status === 'done') {
                 error: function () {
                     document.getElementById('done').style.display = 'none';
                     console.error('Failed to fetch status.');
-                    alert('in 895');
+                    alert('in 898');
                     if(localStorage.getItem('username') === null ){
+                        alert(900);
                         document.getElementById('errorPopUpBrowser').style.display = 'block';
+                        document.getElementById('errorPopUp').style.display = 'none';
                     }
                     else{
+                        alert('in 903');
                         document.getElementById('errorPopUp').style.display = 'block';
+                        document.getElementById('errorPopUpBrowser').style.display = 'none';
                     }                    
                 }});
 
@@ -930,6 +935,7 @@ if (status === 'done') {
 }
 else if (status === 'error'){
     // Display error pop-up
+    alert(937);
     document.getElementById('send').style.display = 'none';
     document.getElementById("instructions").style.display = "none";
     document.getElementById('errorPopUp').style.display = 'block';
@@ -964,6 +970,7 @@ else if (status === 'confirm'){
                 }});
 
                 if(localStorage.getItem('username') === null ){
+                    alert(972);
                     document.getElementById('ageGroupConfirm').style.display = 'none';
                     document.getElementById("instructions").style.display = "none";
                     document.getElementById('errorPopUpBrowser').style.display = 'block';
@@ -1010,6 +1017,7 @@ xhr.onload = function () {
         document.getElementById("instructions").style.display = "none";
         document.getElementById('sendlogin').style.display = 'none';
     } else if (xhr.status === 404) {
+        alert(1017);
         document.getElementById('sendlogin').style.display = 'none';
         document.getElementById("instructions").style.display = "none";
         document.getElementById('errorPopUp').style.display = 'block';
@@ -1042,6 +1050,7 @@ xhr.onload = function () {
 
 
     } else if (xhr.status === 404) {
+        alert(1049);
         document.getElementById('signUpConfirmation').style.display = 'none';
         document.getElementById('send').style.display = 'none';
         document.getElementById("instructions").style.display = "none";
@@ -1069,6 +1078,7 @@ xhr.onload = function () {
         document.getElementById("instructions").style.display = "none";
         document.getElementById('send').style.display = 'none';
     } else if (xhr.status === 404) {
+        alert(1076);
         document.getElementById('send').style.display = 'none';
         document.getElementById("instructions").style.display = "none";
         document.getElementById('errorPopUp').style.display = 'block';
