--- a/FrontEnd/templates/about.html
+++ b/FrontEnd/templates/about.html
@@ -35,20 +35,9 @@
 
 	<style>
 		.team{
-			display: flex;
-			flex-direction: row;
-			justify-content:space-between;
-			padding: 70px;
+			margin-bottom: 5%;
 		}
-		.team li h4 ::after{
-			position: absolute;
-            left: 0;
-            bottom: 0;
-            width: 20px;
-            height: 2px;
-            background-color: #ff069a;
-            content: "";
-		}
+
 		.games{
 			color: #fff;
 		}
@@ -209,15 +198,30 @@ nav.main-menu li:hover > a span {
 nav.main-menu ul li:last-child a {
 padding: 10px;
 }
-	#WhyGG{
-			margin-left: -390px;
-		}
-		#tWHY{
-			margin-left: -70px;
-            margin-bottom: 80px;
-		}
+
 }
 
+@media only screen and (min-width: 992px) and (max-width: 1100px) {
+#WhyGG{
+	margin-left: -390px;
+	}
+
+#tWHY{
+	margin-left: -70px;
+    margin-bottom: 80px;
+		}
+}
+@media only screen and (min-width: 901px) and (max-width: 991px) {
+#WhyGG{
+	margin-left: 0px;
+
+	}
+
+#tWHY{
+	margin-left: 0px;
+    margin-bottom: 80px;
+		}
+}
 
 
 @media only screen and (min-width: 200px) and (max-width: 900px) {
@@ -244,11 +248,17 @@ padding: 10px;
 	  font-size: 12px;
 	 }
 
+
+
 }
+
+
+
+
 	</style>
 </head>
 <body>
-	
+
 	<!--PreLoader-->
     <div class="loader">
         <div class="loader-inner">
@@ -256,7 +266,7 @@ padding: 10px;
         </div>
     </div>
     <!--PreLoader Ends-->
-	
+
 	<!-- header -->
 	<div class="top-header-area" id="sticker">
 		<div class="container">
@@ -323,7 +333,7 @@ padding: 10px;
 			</div>
 		</div>
 		<!-- end header -->
-	
+
 	<!-- breadcrumb-section -->
 	<div class="breadcrumb-section breadcrumb-bg">
 		<div class="container">
@@ -410,23 +420,47 @@ padding: 10px;
 	</div>
 	<!-- end featured section -->
 
-		<!-- team section -->
-		<div class="mt-150">
-			<div class="container">
-				<div class="row">
-					<div class="col-lg-8 offset-lg-2 text-center">
-						<div class="section-title">
-							<h3>Our <span class="orange-text">Team</span></h3>
-						</div>
+	<!-- team section -->
+	<div class="mt-150 team">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-8 offset-lg-2 text-center">
+					<div class="section-title">
+						<h3>Our <span class="orange-text">Team</span></h3>
 					</div>
 				</div>
-	<ul class="team" style="list-style-type: none;">
-		<li><h4>Hana Alfozan</h4></li>
-		<li><h4>Reem Almusharraf</h4></li>
-		<li><h4>Deema Alresheed</h4></li>
-		<li><h4>Reema Alhenaki</h4></li>
-	</ul>
 			</div>
+			<div class="row">
+				<div class="col-lg-3 col-md-6">
+					<div class="single-team-item">
+						<h4>Hana Alfozan </h4>
+
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-6">
+					<div class="single-team-item">
+
+						<h4>Reem Almusharraf</h4>
+
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-6">
+					<div class="single-team-item">
+						<div ></div>
+						<h4>Deema Alresheed</h4>
+
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-6">
+					<div class="single-team-item">
+						<div ></div>
+						<h4>Reems Alhenaki</h4>
+
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 	<!-- end team section -->
 
 	<!-- footer -->
@@ -475,14 +509,14 @@ padding: 10px;
 								<li class="dash"><a href="{% url 'contact' %}">Contact Us</a></li>
 								<li class="dash"><a href="{% url 'about' %}">About Us</a></li>
 							</ul>
-						
+
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
 	<!-- end footer -->
-	
+
 	<!-- copyright -->
 	<div class="copyright">
 		<div class="container">
@@ -495,7 +529,7 @@ padding: 10px;
 		</div>
 	</div>
 	<!-- end copyright -->
-	
+
 	<!-- jquery -->
 	<script src="{% static 'js/jquery-1.11.3.min.js' %}"></script>
 	<!-- bootstrap -->
