Responsive modifications (about.html) additional modification Responsive names list

--- a/FrontEnd/templates/about.html
+++ b/FrontEnd/templates/about.html
@@ -454,7 +454,7 @@ padding: 10px;
 				<div class="col-lg-3 col-md-6">
 					<div class="single-team-item">
 						<div ></div>
-						<h4>Reems Alhenaki</h4>
+						<h4>Reema Alhenaki</h4>
 
 					</div>
 				</div>
